metadata/MindReader/objects/Task__c.object
<CustomObject>
    <description>Daily Tasks</description>
    <fields>
        <fullName>IsCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Task Completed ?</description>
        <inlineHelpText>Is Task Completed ?</inlineHelpText>
        <label>IsCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaskLocation__c</fullName>
        <description>Typical Task Locations</description>
        <inlineHelpText>Select Typical Task Locations</inlineHelpText>
        <label>TaskLocation</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Office/Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TaskName__c</fullName>
        <description>Name of the Task</description>
        <inlineHelpText>Name of the Task</inlineHelpText>
        <label>TaskName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskStatus__c</fullName>
        <description>Current Task Status</description>
        <inlineHelpText>Displays current task status</inlineHelpText>
        <label>TaskStatus</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Date_Time__c</fullName>
        <description>Date &amp; TIme of the Task</description>
        <inlineHelpText>Date &amp; Time of the Task</inlineHelpText>
        <label>Task Date-Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Task_Date__c</fullName>
        <description>Task Date</description>
        <inlineHelpText>Task Date</inlineHelpText>
        <label>Task Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <description>Task Description</description>
        <inlineHelpText>Task Description</inlineHelpText>
        <label>Task Description</label>
        <type>TextArea</type>
    </fields>
    <label>Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>